// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcButtonGroup :props :items - should render the button group with two items all on outline 1`] = `
<div
  class="ec-btn-group"
  data-test="ec-btn-group"
>
  <button
    class="ec-btn ec-btn-group__btn ec-btn--md ec-btn--primary ec-btn--outline"
    data-test="ec-button-group__btn ec-button-group__btn-0 ec-btn"
    type="button"
  >
    <!---->
     
    <span
      class=""
      data-test="ec-btn__text"
    >
      Yes
    </span>
     
    <!---->
  </button>
  <button
    class="ec-btn ec-btn-group__btn ec-btn--md ec-btn--primary ec-btn--outline"
    data-test="ec-button-group__btn ec-button-group__btn-1 ec-btn"
    type="button"
  >
    <!---->
     
    <span
      class=""
      data-test="ec-btn__text"
    >
      No
    </span>
     
    <!---->
  </button>
</div>
`;

exports[`EcButtonGroup :props :items - should render the button group with two items with one disabled 1`] = `
<div
  class="ec-btn-group"
  data-test="ec-btn-group"
>
  <button
    class="ec-btn ec-btn-group__btn ec-btn--md ec-btn--primary ec-btn--outline"
    data-test="ec-button-group__btn ec-button-group__btn-0 ec-btn"
    type="button"
  >
    <!---->
     
    <span
      class=""
      data-test="ec-btn__text"
    >
      Yes
    </span>
     
    <!---->
  </button>
  <button
    class="ec-btn ec-btn-group__btn ec-btn--md ec-btn--primary ec-btn--outline"
    data-test="ec-button-group__btn ec-button-group__btn-1 ec-btn"
    disabled="disabled"
    type="button"
  >
    <!---->
     
    <span
      class=""
      data-test="ec-btn__text"
    >
      No
    </span>
     
    <!---->
  </button>
</div>
`;
